frontend-backend-algorith together

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 <body>
     <div class="im" style="background-image:url(../static/catcatdogdog.avif);">
         <header class="header">
-        <a class="logo" href=".page-top">VetVision</a>
+            <img src="../static/logo.png" alt="">
+        <a class="logo" href="/">VetVision</a>
         <ul class="menu">
             <li><a href="#one" class="link link-theme link-arrow">Home</a></li>
             <li><a href="#two" class="link link-theme link-arrow">About</a></li>
