--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
             <img src="../static/logo.png" alt="">
         <a class="logo" href="/">VetVision</a>
         <ul class="menu">
-            <li><a href="#one" class="link link-theme link-arrow">Home</a></li>
-            <li><a href="#two" class="link link-theme link-arrow">About</a></li>
-            <li><a href="#three" class="link link-theme link-arrow">Contact</a></li>
+            <li><a href="" class="link link-theme link-arrow">Home</a></li>
+            <li><a href="" class="link link-theme link-arrow">About</a></li>
+            <li><a href="" class="link link-theme link-arrow">Contact</a></li>
         </ul>
         </header>
         <div class="p1">
