--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,9 @@
                 <label for="pet_type">Pet Type:</label>
                 <input type="text" id="pet_type" name="pet_type" required>
                 <br>
+                <label for="pet_id">Pet ID:</label>
+                <input type="text" id="pet_id" name="pet_id" required>
+                <br>
                 <button type="submit">Add Pet</button>
             </form>
         </div>
