--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
             <li><a href="" class="link link-theme link-arrow">Home</a></li>
             <li><a href="" class="link link-theme link-arrow">About</a></li>
             <li><a href="" class="link link-theme link-arrow">Contact</a></li>
+            <li><a href="" class="link link-theme link-arrow">Login</a></li>
         </ul>
         </header>
         <div class="p1">
