--- a/templates/all_pets.html
+++ b/templates/all_pets.html
@@ -6,6 +6,15 @@
 </head>
 <body>
   <h1>All Pets</h1>
+  <header class="header">
+    <img src="../static/logo.png" alt="">
+<a class="logo" href="/">VetVision</a>
+<ul class="menu">
+    <li><a href="/" class="link link-theme link-arrow">Home</a></li>
+    <li><a href="" class="link link-theme link-arrow">About</a></li>
+    <li><a href="" class="link link-theme link-arrow">Contact</a></li>
+</ul>
+</header>
   <table>
     <thead>
       <tr>
