--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,18 @@
             </form>
         </div>
     </div>
+
+    <div class="p2">
+
+
+    </div class="p3">
+
+
+    <div>
+
+
+
+    </div>
 </body>
 <script src="{{url_for('static', filename='index.js')}}"></script>
 </html>
