added file upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,15 @@
                 <br>
                 <button type="submit">Add Pet</button>
             </form>
+            <form method="post" enctype="multipart/form-data">
+                <div>
+                  <label for="file">Choose file to upload</label>
+                  <input type="file" id="file" name="file" multiple />
+                </div>
+                <div>
+                  <button>Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 
