--- a/static/index.css
+++ b/static/index.css
@@ -98,7 +98,8 @@ h1,h2,h3,h4,h5,h6 {
   padding-bottom: 4px;
   text-transform: uppercase;
   font-family: Montserrat, helvetica, arial, sans-serif;
-  font-weight: 700
+  font-weight: 700;
+  color: #000;
 }
 
 .link:active,
@@ -378,6 +379,7 @@ h1,h2,h3,h4,h5,h6 {
 
 
 .p1 {
+  backdrop-filter: blur(3px); /* Adjust blur strength as needed */
   width: 100%;
   height: 100vh;
   display: flex;
@@ -438,6 +440,7 @@ label {
   z-index: 100;
   font-weight: bold;
   margin-bottom: 5px;
+  color: #000;
 }
 
 .file-input,
@@ -471,7 +474,6 @@ p {
 .formStyle {
   padding: 10px;
 }
-
 .im {
   background-repeat: no-repeat;
   background-size: cover;
@@ -479,10 +481,9 @@ p {
   margin: 0 auto;
   width: 100%;
   height: 100vh;
-  opacity: 1;
-  z-index: -19;
-  
+  opacity: 0.9;
 }
+
 
 .center {
   border: 5px solid;
