--- a/templates/login.html
+++ b/templates/login.html
@@ -4,15 +4,16 @@
 </head>
     <body>
         <div>
-            <header class="header">
-                <img src="../static/logo.png" alt="">
-            <a class="logo" href="/">VetVision</a>
-            <ul class="menu">
-                <li><a href="/" class="link link-theme link-arrow">Home</a></li>
-                <li><a href="" class="link link-theme link-arrow">About</a></li>
-                <li><a href="" class="link link-theme link-arrow">Contact</a></li>
-            </ul>
-            </header>
+          <header class="header">
+            <img src="../static/logo.png" alt="">
+        <a class="logo" href="/">VetVision</a>
+        <ul class="menu">
+            <li><a href="" class="link link-theme link-arrow">Home</a></li>
+            <li><a href="" class="link link-theme link-arrow">About</a></li>
+            <li><a href="" class="link link-theme link-arrow">Contact</a></li>
+            <li><a href="/login" method="POST" class="link link-theme link-arrow">Login</a></li>
+        </ul>
+        </header>
 
             <div class="box">
                 <h1>Log In</h1>
