--- a/templates/all_pets.html
+++ b/templates/all_pets.html
@@ -5,51 +5,60 @@
   <title>All Pets</title>
 </head>
 <body>
-  <h1>All Pets</h1>
-  <header class="header">
-    <img src="../static/logo.png" alt="">
-<a class="logo" href="/">VetVision</a>
-<ul class="menu">
-    <li><a href="/" class="link link-theme link-arrow">Home</a></li>
-    <li><a href="" class="link link-theme link-arrow">About</a></li>
-    <li><a href="" class="link link-theme link-arrow">Contact</a></li>
-</ul>
-</header>
-  <table>
-    <thead>
-      <tr>
-        <th>Owner Name</th>
-        <th>Pet Name</th>
-        <th>Pet Type</th>
-        <th>Pet ID</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pet in pets %}
-        <tr>
-          <td>{{ pet[0] }}</td>
-          <td>{{ pet[1] }}</td>
-          <td>{{ pet[2] }}</td>
-          <td>{{ pet[3] }}</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  <form method="POST">
-    <label for="owner_name_delete">Owner Name:</label>
-    <input type="text" id="owner_name" name="owner_name_delete" required>
-    <br>
-    <label for="pet_name">Pet Name:</label>
-    <input type="text" id="pet_name" name="pet_name_delete" required>
-    <br>
-    <label for="pet_type">Pet Type:</label>
-    <input type="text" id="pet_type" name="pet_type_delete" required>
-    <br>
-    <label for="pet_id">Pet ID:</label>
-    <input type="text" id="pet_id" name="pet_id" required>
-    <br>
-    <button type="submit">Delete from database</button>
-</form>
+  <div class="container">
+    <header class="header">
+      <img src="../static/logo.png" alt="">
+      <a class="logo" href="/">VetVision</a>
+      <ul class="menu">
+        <li><a href="/" class="link link-theme link-arrow">Home</a></li>
+        <li><a href="#" class="link link-theme link-arrow">About</a></li>
+        <li><a href="#" class="link link-theme link-arrow">Contact</a></li>
+      </ul>
+    </header>
+
+    <h1>All Pets</h1>
+
+    <div class="table-container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Owner Name</th>
+            <th>Pet Name</th>
+            <th>Pet Type</th>
+            <th>Pet ID</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for pet in pets %}
+            <tr>
+              <td>{{ pet[0] }}</td>
+              <td>{{ pet[1] }}</td>
+              <td>{{ pet[2] }}</td>
+              <td>{{ pet[3] }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    <div class="form-container">
+      <form method="POST">
+        <label for="owner_name_delete">Owner Name:</label>
+        <input type="text" id="owner_name" name="owner_name_delete" required>
+        <br>
+        <label for="pet_name">Pet Name:</label>
+        <input type="text" id="pet_name" name="pet_name_delete" required>
+        <br>
+        <label for="pet_type">Pet Type:</label>
+        <input type="text" id="pet_type" name="pet_type_delete" required>
+        <br>
+        <label for="pet_id">Pet ID:</label>
+        <input type="text" id="pet_id" name="pet_id" required>
+        <br>
+        <button type="submit">Delete from database</button>
+      </form>
+    </div>
+  </div>
+  <script src="{{url_for('static', filename='all_pets.js')}}"></script>
 </body>
-<script src="{{url_for('static', filename='all_pets.js')}}"></script>
 </html>
