--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,7 +12,7 @@
         <a class="logo" href="/">VetVision</a>
         <ul class="menu">
             <li><a href="#home" class="link link-theme link-arrow">Home</a></li>
-            <li><a href="/contact" method="POST" class="link link-theme link-arrow">Contact</a></li>
+            <li><a href="#contact" method="POST" class="link link-theme link-arrow">Contact</a></li>
             <li><a href="/login" method="POST" class="link link-theme link-arrow">Login</a></li>
         </ul>
     </header>
